2012-06-02  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Refactor API to facilitate implementation of GUI ListView hooks.

	* src/pkgkeys.h (title_key, description_key): Declare them.
	* src/pkgkeys.c (title_key, description_key): Define them; relocate...
	* src/pkgshow.cpp (pkgDirectoryViewer::EmitDescription): ...from here.
	(pkgXmlDocument::CalalogueAllPackages): New public method; factor...
	(pkgXmlDocument::DisplayPackageInfo): ...from here, whence use it.
	(pkgDirectoryViewerEngine::EnumerateComponents): New private method;
	implement as a concrete method of this abstract base class; factor...
	(pkgDirectoryViewer::Dispatch): ...from original inline implementation
	within this method of the concrete derived class, whence use it.
	(pkgDirectoryViewerEngine, pkgDirectory): Factor class declarations...
	* src/pkglist.h: ...into this new header file; include it.

	* src/pkgbase.h (pkgDirectory): Add forward class declaration.
	(pkgXmlDocument::CatalogueAllPackages): Declare it.

2012-05-02  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Update help text to document package version selection capability.

	* src/clistub.c (help_text): Add description of command line syntax
	which may be used to specify an alternative to the default package
	version selection, for install and upgrade actions.

2012-05-01  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Support options set by preferences assigned within profile.xml

	* xml/profile.xml (preferences): New element; add defaults.

	* src/pkgopts.h (OPTION_ASSIGNED_FLAGS, OPTION_DESKTOP_ARGS):
	(OPTION_START_MENU_ARGS): New enumerated constants; define them.
	(OPTION_DESKTOP, OPTION_START_MENU): New manifest constants.
	(OPTION_ASSIGNED, mark_option_as_set): New macros; define them.
	(pkgOpts::GetValue, pkgOpts::GetString): Restrict look-up index to
	least significant 12-bits of full-range index value.
	(pkgOpts::IsSet): New inline method; implement it.
